--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
   <!--Sidebar-->
   <shared-sidebar></shared-sidebar>
   <!--HomePage-->
-
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 </div>
